# precipitation_forecast

./: Makefile  README.md  pyproject.toml
adv_mla_at2/: __init__.py  dataset.py  features.py  plots.py
adv_mla_at2/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: .cache.sqlite  36120-25SP-AT2-student_id-experiment.ipynb  EDA.ipynb  fetch_data.ipynb
notebooks/precipitation_fall/: 36120-25SP-AT2-25552249-experiment-1.ipynb  36120-25SP-AT2-25552249-experiment-2.ipynb  36120-25SP-AT2-25552249-experiment-3.ipynb  36120-25SP-AT2-25552249-experiment-reg-final.ipynb  COPY-36120-25SP-AT2-25552249-experiment-1-Copy1.ipynb  FINAL-36120-25SP-AT2-25552249-experiment-1-Copy1.ipynb  FINAL-36120-25SP-AT2-25552249-experiment-1.ipynb  exp436120-25SP-AT2-25552249-experiment-3-Copy1.ipynb  exp5-36120-25SP-AT2-25552249-experiment-5.ipynb
notebooks/rain_or_not/: 36120-25SP-AT2-25552249-experiment-1.ipynb  36120-25SP-AT2-25552249-experiment-2.ipynb  36120-25SP-AT2-25552249-experiment-3.ipynb  36120-25SP-AT2-25552249-experiment-4.ipynb  36120-25SP-AT2-25552249-experiment-5.ipynb  36120-25SP-AT2-25552249-experiment-6.ipynb  36120-25SP-AT2-25552249-experiment-clf-final.ipynb  COPY-36120-25SP-AT2-25552249-experiment-1-Copy1.ipynb  COPY2-36120-25SP-AT2-25552249-experiment-1.ipynb  Date36120-25SP-AT2-25552249-experiment-6-Copy1.ipynb  FINAL-36120-25SP-AT2-25552249-experiment-1-Copy1.ipynb  FINAL-36120-25SP-AT2-25552249-experiment-1.ipynb  TEST.ipynb
