[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adv_mla_at2"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Shawya Saito" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.11.4"


[tool.ruff]
line-length = 99
src = ["adv_mla_at2"]
include = ["pyproject.toml", "adv_mla_at2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["adv_mla_at2"]
force-sort-within-sections = true

