[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adv_mla_at2"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Shawya Saito" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.11.4"


[tool.ruff]
line-length = 99
src = ["adv_mla_at2"]
include = ["pyproject.toml", "adv_mla_at2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["adv_mla_at2"]
force-sort-within-sections = true


[tool.poetry.dependencies]
wandb = "0.17.4"
seaborn = "^0.13.2"
scikit-optimize = "^0.10.2"
pandas = "2.2.2"
scikit-learn = "1.5.1"
jupyterlab = "4.2.3"
joblib = "1.4.2"
tqdm = "^4.67.1"
prophet = "^1.1.7"
statsmodels = "^0.14.5"
cython = "^3.1.3"
hyperopt = "^0.2.7"
xgboost = "^3.0.5"
